apps/simple-chat/deployment/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: simple-chat
  annotations:
    argocd.argoproj.io/sync-wave: "1"
