apps/simple-chat/deployment/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-chat
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: simple-chat
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: simple-chat
  template:
    metadata:
      labels:
        app: simple-chat
    spec:
      containers:
        - name: simple-chat
          image: quay.io/kenmoini/simple-chat:latest
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 6969
              protocol: TCP
              name: websocket
            - containerPort: 7979
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: chats
              mountPath: /opt/app-root/src/data
            - name: config-volume
              mountPath: /opt/app-root/src/config
      volumes:
        - name: chats
          emptyDir: {}
        - name: config-volume
          configMap:
            name: simple-chat-ws-js
