apps/simple-chat/deployment/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-chat
  labels:
    app: simple-chat
spec:
  selector:
    app: simple-chat
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 6969
      name: websocket
    - protocol: TCP
      port: 7979
      targetPort: 7979
      name: http
