apps/simple-chat/deployment/base/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app: simple-chat
  name: chat
spec:
  to:
    kind: Service
    name: simple-chat
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app: simple-chat
  name: ws
spec:
  to:
    kind: Service
    name: simple-chat
    weight: 100
  port:
    targetPort: websocket
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
